--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "prettier": "^2.6.2",
     "ts-mocha": "^10.0.0",
     "typescript": "^4.3.5"
-  }
+  },
+  "workspaces": [
+    "app/front-end"
+  ]
 }
